# qtsparkle

./: .clang-format  .gitignore  CMakeLists.txt  README.md  qtsparkleConfig.cmake.in
exampleapp/: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h
src/: CMakeLists.txt  appcast.cpp  appcast.h  appcast_fwd.h  common.cpp  common.h  compareversions.cpp  compareversions.h  followredirects.cpp  followredirects.h  translations.ts  uicontroller.cpp  uicontroller.h  updatechecker.cpp  updatechecker.h  updatedialog.cpp  updatedialog.h  updatedialog.ui  updater.cpp  updater.h
